mysql database connected

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,5 +1,5 @@
-PORT=8080
-DB_USER=samarth
-DB_PASSWORD=Samarth123
-DB_CONNECT_STRING=localhost:1521/XE
+PORT=3306
+DB_USER=xxxxx
+DB_PASSWORD=xxxxxxxxxx
+DB_NAME=xxxxxxxxxxxxx
 CORS=*
